# hyprclock

./: Cargo.toml  DOCS.md  NEWS.md  README.md
src/: args.rs  clock.rs  config.rs  main.rs
ui/: app-window.slint
