[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
csscolorparser = "0.7.0"
libc = "0.2.172"
notify-rust = "4.11.7"
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
slint = "1.8.0"
i-slint-backend-winit = "1.8.0"
toml = "0.8.22"

[build-dependencies]
slint-build = "1.8.0"
